--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
             <form (ngSubmit)="login()">
             <h3>Firebase Login</h3>
             <div class="form-group p-2">
-            <input type="email" name="email" class="form-control" [(ngModel)]="email" placeholder="Enter email Id" required>
+            <input type="email" name="email" class="form-control" [(ngModel)]="email" placeholder="Enter email" required>
         </div>
         <div class="form-group p-2">
             <input type="password" name="password" class="form-control" [(ngModel)]="password" placeholder="Enter Password" required>
